--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,8 @@ python:
   - "3.6"      # current default Python on Travis CI
   - "3.7"
   - "3.8"
-# command to run tests
+install:
+- pip install pipenv
+- pipenv install --dev
 script:
-  - pytest
+- pylint **/*.py
