--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,9 @@
 language: python
 python:
   - "2.7"
-  - "3.4"
-  - "3.5"
   - "3.6"      # current default Python on Travis CI
-  - "3.7"
-  - "3.8"
-install:
-- pip install pytest
+before_install:
+  - python --version
+  - pip install -U pip
 script:
-- pytest
+  - find -name "*.py" xargs pylint
