--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,6 @@ before_install:
   - python --version
   - pip install -U pip
 install:
-  - pip install pylint
+  - pip install pylint requests
 script:
   - find -name "*.py" | xargs pylint
